# diskusage

./: .dockerignore  .travis.yml  BuilderDockerfile  Dockerfile  DockerfileBuilder  README.md  makefile  requirements.txt  setup.cfg
diskusage/: __init__.py  encode.py  server.py
diskusage/assets/: plugin.js
