[metadata]
name = diskusage
author = Dennis Lutter
author-email = lad1337@gmail.com
summary = simple disk usage interface with server
home-page = https://github.com/lad1337/diskusage
classifier =
    Environment :: Console
    Intended Audience :: Developres
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Topic :: Software Development :: Libraries


[entry_points]
console_scripts =
    diskusage-server = diskusage.server:main